Windows Template Library 9.1 headers have been integrated to the project.
Windows Template Library 9.1 headers have been integrated to the project since they work with all versions of Visual Studio and can be used to compile a driver that is compatible with all supported Windows versions (from WinNT4 SP6 to Win11).

--- a/drivercfg/drivercfg.08.vcproj
+++ b/drivercfg/drivercfg.08.vcproj
@@ -43,7 +43,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\wtl\Include"
+				AdditionalIncludeDirectories="..\external_packages\wtl\Include"
 				PreprocessorDefinitions="WIN32;_WINDOWS;STRICT;_DEBUG;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -121,7 +121,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\wtl\Include"
+				AdditionalIncludeDirectories="..\external_packages\wtl\Include"
 				PreprocessorDefinitions="WIN32;WIN64;_WINDOWS;STRICT;_DEBUG;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -200,7 +200,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\wtl\Include"
+				AdditionalIncludeDirectories="..\external_packages\wtl\Include"
 				PreprocessorDefinitions="WIN32;_WINDOWS;STRICT;NDEBUG;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
@@ -284,7 +284,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\wtl\Include"
+				AdditionalIncludeDirectories="..\external_packages\wtl\Include"
 				PreprocessorDefinitions="WIN32;WIN64;_WINDOWS;STRICT;NDEBUG;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
