--- a/drivercfg/drivercfg.vcxproj
+++ b/drivercfg/drivercfg.vcxproj
@@ -60,7 +60,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)wtl\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)external_packages\wtl\include;$(IncludePath)</IncludePath>
     <GenerateManifest>false</GenerateManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -68,7 +68,7 @@
     <OutDir>Release</OutDir>
     <LinkIncremental>false</LinkIncremental>
     <LibraryPath>$(LibraryPath)</LibraryPath>
-    <IncludePath>$(SolutionDir)wtl\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)external_packages\wtl\include;$(IncludePath)</IncludePath>
     <GenerateManifest>false</GenerateManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -76,11 +76,11 @@
     <OutDir>Release</OutDir>
     <LinkIncremental>false</LinkIncremental>
     <LibraryPath>$(LibraryPath)</LibraryPath>
-    <IncludePath>$(SolutionDir)wtl\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)external_packages\wtl\include;$(IncludePath)</IncludePath>
     <GenerateManifest>false</GenerateManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)wtl\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)external_packages\wtl\include;$(IncludePath)</IncludePath>
     <GenerateManifest>false</GenerateManifest>
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
