--- a/driver/vstmididrv.vcxproj
+++ b/driver/vstmididrv.vcxproj
@@ -31,7 +31,12 @@
     <ClInclude Include="..\external_packages\aeffectx.h" />
     <ClInclude Include="..\external_packages\audiodefs.h" />
     <ClInclude Include="..\external_packages\comdecl.h" />
+    <ClInclude Include="..\external_packages\mmddk.h" />
+    <ClInclude Include="..\external_packages\win32lock.h" />
     <ClInclude Include="MidiSynth.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="targetver.h" />
     <ClInclude Include="VSTDriver.h" />
   </ItemGroup>
   <ItemGroup>
