Added VstMidiProxy project + some fixes
1. Added VstMidiProxy project. VstMidiProxy enables global ports so multiple clients can use the same ports. If it is enabled it also makes your heavy plugins (e.g. SC-VA) never close and stay ready all the time.
Autostart with Windows option is also implemented.
2. Added conversion of short Midi messages sent with midiOutLongMsg(). VSTi plugins usually cannot handle short messages sent as kVstSysExType. So the driver sends short channel messages always as kVstMidiType.
3. Fixed Winamp Midi plugin 3.x ANSI/Unicode bug.

--- a/cplwrapper/cplwrapper.vcxproj
+++ b/cplwrapper/cplwrapper.vcxproj
@@ -14,8 +14,7 @@
     <ProjectName>cplwrapper</ProjectName>
     <ProjectGuid>{21817C19-DA31-4413-A92D-3DEE89C88F0F}</ProjectGuid>
     <RootNamespace>cplwrapper</RootNamespace>
-    <Keyword>Win32Proj</Keyword>
-    <WindowsTargetPlatformVersion>7.0</WindowsTargetPlatformVersion>
+    <Keyword>Win32Proj</Keyword>  
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -36,10 +35,7 @@
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
-  <PropertyGroup Label="UserMacros" />
-  <PropertyGroup>
-    <_ProjectFileVersion>15.0.28307.799</_ProjectFileVersion>
-  </PropertyGroup>
+  <PropertyGroup Label="UserMacros" />  
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
@@ -85,7 +81,7 @@
     </ClCompile>
     <Link>
       <AdditionalOptions>/ignore:4254 %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>msvcrt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>..\external_packages\lib\msvcrt.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(OutDir)vstmididrvcfg.cpl</OutputFile>
       <IgnoreAllDefaultLibraries>true</IgnoreAllDefaultLibraries>
       <ModuleDefinitionFile>cplwrapper.def</ModuleDefinitionFile>
