Added debug mode memory leak detection + made GetFileVersion simpler (compile time)

--- a/drivercfg/drivercfg.08.vcproj
+++ b/drivercfg/drivercfg.08.vcproj
@@ -65,6 +65,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="winmm.lib"
 				OutputFile="$(OutDir)\vstmididrvcfg.exe"
+				GenerateManifest="false"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -144,6 +145,7 @@
 				AdditionalDependencies="winmm.lib"
 				OutputFile="$(OutDir)\vstmididrvcfg.exe"
 				GenerateDebugInformation="true"
+				GenerateManifest="false"
 				SubSystem="2"
 				TargetMachine="17"
 			/>
