--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "external_packages/ASIO2WASAPI"]
 	path = external_packages/ASIO2WASAPI
-	url = https://github.com/Falcosoft/ASIO2WASAPI/tree/VST-Midi-Driver-private-plugin
+	url = https://github.com/Falcosoft/ASIO2WASAPI.git
+	branch = VST-Midi-Driver-private-plugin
