Added wavewriter class to implement wave rendering
Added simple wavewriter class to implement wave rendering from vsthost. New menu item is added to trayicon's context menu.
Only native VSTi 32-bit float format is supported.

--- a/vsthost/vsthost.08.vcproj
+++ b/vsthost/vsthost.08.vcproj
@@ -387,6 +387,10 @@
 				RelativePath=".\vsthost.rc"
 				>
 			</File>
+			<File
+				RelativePath=".\wavewriter.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -399,6 +403,10 @@
 			</File>
 			<File
 				RelativePath=".\targetver.h"
+				>
+			</File>
+			<File
+				RelativePath=".\wavewriter.h"
 				>
 			</File>
 			<File
