--- a/vsthost/vsthost.vcxproj
+++ b/vsthost/vsthost.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="wavewriter.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -174,6 +175,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="vsthost.cpp" />
+    <ClCompile Include="wavewriter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="vsthost.rc" />
