--- a/vsthost/vsthost.08.vcproj
+++ b/vsthost/vsthost.08.vcproj
@@ -344,6 +344,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\log.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -397,6 +401,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\log.h"
+				>
+			</File>
 			<File
 				RelativePath=".\stdafx.h"
 				>
